Mid project, index.html and our-team.html almost done

--- a/index.html
+++ b/index.html
@@ -1,17 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Help All</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Help All</title>
 </head>
 
 <body>
 
-<header></header>
-<section></section>
-<footer></footer>
-    
+	<header>
+		<div class="container-fluid bg-container">
+			<div class="row no-gutters"><a href="index.html">
+					<div class="col-sm-6 col-sx-12">
+						<div id="logo">
+							<img src="assets/images/logo4.png" width="180" height="120" />
+ </div>
+				</a>
+				<nav>
+					<ul class="content-color2" id="menu">
+						<li class="col-sm-2 col-sx-12 menuitem"><a href="donate.html">
+								<i class="fas fa-hand-holding-heart" aria-hidden="true"></i><span>Donate</span></a>
+						</li>
+						<li class="col-sm-2 col-sx-12 menuitem"><a href="our-team.html">
+								<i class="fas fa-users" aria-hidden="true"></i><span> Team</span></a>
+						</li>
+
+						<li class="col-sm-2 col-sx-12 menuitem"><a class="active" href="index.html">
+								<i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		</div>
+	</header>
+
+	<section id="hero-outer">
+		<div id="hero-image" ></div>
+		<div id="cover-text">
+
+			<h5 style="color:#4dd0e1">Together we can do 10x more!</h5>
+		</div>
+	</section>
+	<section class="content-color2 bg-container text">
+		<h2 class="uppercase welcome">Saving time is the fastest way to help more people</h2>
+		<p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one goal,
+			created
+			by the will of helping
+			we split all the donations equally among the 10 biggest charities in the country. Growing together is the
+			best
+			path to a better and supported society, click <a href="our-team.html" class="link">here</a> to know more
+			about each of
+			our supported charities. </p>
+
+		<hr size="10" width="65%" color="#616161">
+		</hr>
+		<h3 class="uppercase description">Together to achieve:</h3>
+
+		<div class="row col-sm-12">
+			<div class="col-sm-4">
+				<div class="col-sx-12">
+					<h2>Vision <i class="fas fa-eye" aria-hidden="true"></i></h2>
+
+					<p>
+						Responsive, tailored and holistic approaches to identifying and meeting needs
+					</p>
+					<hr class="hr-text">
+				</div>
+				<div class="col-sx-12">
+					<h2>Connection<i class="fas fa-globe" aria-hidden="true"></i></h2>
+
+					<p>
+						Flexibility, innovation, integration and collaboration in delivery
+					</p>
+					<hr class="hr-text">
+				</div>
+				<div class="col-sx-12">
+					<h2>Collaboration<i class="fas fa-people-carry" aria-hidden="true"></i></h2>
+
+					<p>
+						Ownership, involvement and empowerment of service-beneficiaries and the wider community in
+						shaping
+						services
+						and supports
+					</p>
+					<hr class="hr-text">
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div id="center-about" class="col-sx-12">
+					<div id="circle-container">
+
+						<div id="circle-cover-bg">
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="col-sx-12">
+					<h2>Development<i class="fas fa-layer-group" aria-hidden="true"></i></h2>
+
+					<p>
+						Contributions to building social capital and social cohesion
+					</p>
+					<hr class="hr-text">
+				</div>
+				<div class="col-sx-12">
+					<h2>Focus<i class="fas fa-user-check" aria-hidden="true"></i></h2>
+
+					<p>
+						Committed, motivated and person-centred staff
+					</p>
+					<hr class="hr-text">
+				</div>
+				<div class="col-sx-12">
+					<h2>Strength <i class="fas fa-fist-raised" aria-hidden="true" ></i></h2>
+
+					<p>
+						Bringing additional assets and sources of funding to support the work that would not otherwise
+						be
+						available
+						to the state.
+					</p>
+                    <hr class="hr-text">
+				</div>
+			</div>
+
+
+		</div>
+	</section>
+
+
+	<footer id="footer">
+		<div class="row col-12">
+			<ul class="#">
+				<li class="col-sm-3 list-inline-item">
+					<a href="#" target="_blank">
+						<i class="fa fa-facebook" aria-hidden="true"></i>
+						<span class="sr-only">Facebook</span></a>
+				</li>
+				<li class="col-sm-3 list-inline-item">
+					<a href="#" target="_blank">
+						<i class="fa fa-twitter" aria-hidden="true"></i>
+						<span class="sr-only">Twitter</span></a>
+				</li>
+				<li class="col-sm-3 list-inline-item">
+					<a href="#" target="_blank">
+						<i class="fa fa-instagram" aria-hidden="true"></i>
+						<span class="sr-only">Intagram</span></a>
+				<li class="col-sm-3 list-inline-item">
+					<a href="#" target="_blank">
+						<i class="fa fa-youtube" aria-hidden="true"></i>
+						<span class="sr-only">YouTube</span></a>
+				</li>
+				</li>
+			</ul>
+		</div>
+	</footer>
+
 </body>
+
 </html>
