--- a/index.html
+++ b/index.html
@@ -20,40 +20,41 @@
 	<header>
 		<div class="container-fluid bg-container">
 			<div class="row no-gutters"><a href="index.html">
-					<div class="col-sm-6 col-sx-12">
-						<div id="logo">
-							<img src="assets/images/logo4.png" width="180" height="120" />
- </div>
+					<h1 id="logo"> Help All<i class="far fa-heart"></i></h1>
 				</a>
-				<nav>
-					<ul class="content-color2" id="menu">
-						<li class="col-sm-2 col-sx-12 menuitem"><a href="donate.html">
-								<i class="fas fa-hand-holding-heart" aria-hidden="true"></i><span>Donate</span></a>
-						</li>
-						<li class="col-sm-2 col-sx-12 menuitem"><a href="our-team.html">
-								<i class="fas fa-users" aria-hidden="true"></i><span> Team</span></a>
-						</li>
-
-						<li class="col-sm-2 col-sx-12 menuitem"><a class="active" href="index.html">
-								<i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-						</li>
-					</ul>
-				</nav>
 			</div>
+
+			<nav>
+				<ul class="list-inline nav justify-content-end text menu">
+					<li class="list-inline-item nav-item mr-2 col-sx-12">
+						<a class="nav-link active"
+							href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+					</li>
+					<li class="list-inline-item nav-item mr-2 ">
+						<a class="nav-link"
+							href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
+					</li>
+					<li class="list-inline-item nav-item mr-2">
+						<a class="nav-link "
+							href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
+					</li>
+			</nav>
+		</div>
 		</div>
 		</div>
 	</header>
 
 	<section id="hero-outer">
-		<div id="hero-image" ></div>
+		<div id="hero-image"></div>
 		<div id="cover-text">
 
 			<h5 style="color:#4dd0e1">Together we can do 10x more!</h5>
 		</div>
 	</section>
-	<section class="content-color2 bg-container text">
+	<section class="content-color2 bg-container-section text-center text ">
 		<h2 class="uppercase welcome">Saving time is the fastest way to help more people</h2>
-		<p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one goal,
+		<p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one
+			goal,
 			created
 			by the will of helping
 			we split all the donations equally among the 10 biggest charities in the country. Growing together is the
@@ -132,7 +133,7 @@
 						available
 						to the state.
 					</p>
-                    <hr class="hr-text">
+					<hr class="hr-text">
 				</div>
 			</div>
 
@@ -141,31 +142,39 @@
 	</section>
 
 
-	<footer id="footer">
-		<div class="row col-12">
-			<ul class="#">
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-facebook" aria-hidden="true"></i>
-						<span class="sr-only">Facebook</span></a>
-				</li>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-twitter" aria-hidden="true"></i>
-						<span class="sr-only">Twitter</span></a>
-				</li>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-instagram" aria-hidden="true"></i>
-						<span class="sr-only">Intagram</span></a>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-youtube" aria-hidden="true"></i>
-						<span class="sr-only">YouTube</span></a>
-				</li>
-				</li>
-			</ul>
+<footer id="footer">
+		<div class="row col-12 footer-msg text-center">
+			<h2><i> TEN in one goal is just the beginning!</i>
+				<h2>
 		</div>
+		<i class="col smaller-font-sizer footer-msg text-center ">Help All  •  © 2019  •</i></a>
+		<div class="col container-fluid social-pad">
+			<div class="row col-12">
+				<ul class="list-inline">
+					<li class="list-inline-item">
+						<a href="https://www.facebook.com/" target="_blank">
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://twitter.com/" target="_blank">
+							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<span class="sr-only">Twitter</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://www.instagram.com/" target="_blank">
+							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<span class="sr-only">Intagram</span></a>
+					<li class="list-inline-item">
+						<a href="https://www.youtube.com/" target="_blank">
+							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<span class="sr-only">YouTube</span></a>
+					</li>
+					</li>
+				</ul>
+			</div>
+		</div>
+        
 	</footer>
 
 </body>
