--- a/our-team.html
+++ b/our-team.html
@@ -17,28 +17,28 @@
 
 <body>
 	<header>
-		<div class="container-fluid bg-container">
+		<div class=" bg-container">
 			<div class="row no-gutters"><a href="index.html">
-					<div class="col-sm-6 col-sx-12">
-						<div id="logo">
-							<img src="assets/images/logo4.png" width="180" height="120" />
- </div>
+					<h1 id="logo">Help All <i class="far fa-heart"></i></h1>
 				</a>
-				<nav>
-					<ul class="content-color2" id="menu">
-						<li class="col-sm-2 col-sx-12 menuitem"><a href="donate.html">
-								<i class="fas fa-hand-holding-heart" aria-hidden="true"></i><span>Donate</span></a>
-						</li>
-						<li class="col-sm-2 col-sx-12 menuitem"><a href="our-team.html">
-								<i class="fas fa-users" aria-hidden="true"></i><span> Team</span></a>
-						</li>
-
-						<li class="col-sm-2 col-sx-12 menuitem"><a class="active" href="index.html">
-								<i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-						</li>
-					</ul>
-				</nav>
 			</div>
+
+			<nav>
+				<ul class="nav justify-content-end text menu">
+					<li class="nav-item col-sx-12">
+						<a class="nav-link"
+							href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+					</li>
+					<li class="nav-item col-sx-12">
+						<a class="nav-link active"
+							href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
+					</li>
+					<li class="nav-item col-sx-12">
+						<a class="nav-link "
+							href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
+					</li>
+			</nav>
+		</div>
 		</div>
 		</div>
 	</header>
@@ -48,7 +48,7 @@
 		<div id="hand-love-image"></div>
 
 	</section>
-	<section class="content-color2 bg-container text">
+	<section class="content-color2 bg-container-section text-center text">
 		<h2 class="uppercase welcome">Our Team</h2>
 		<p class="description">Many of Ireland’s charities are part-funded by the state to provide health, social and
 			community services, and they form a critical part of Ireland’s social infrastructure, supporting people and
@@ -63,31 +63,51 @@
 		<div class="row col-sm-12">
 			<div class="col-sm-4">
 				<div class="col-sx-12">
-					<h2>Irish Guide Dogs for the Blind</h2>
+					<h2 class="grow">Irish Guide Dogs for the Blind</h2>
+					<div class="circle-container3">
+
+						<div id="circle-igd-bg">
+
+						</div>
+					</div>
+
 					<p>
 						Irish Guide Dogs is Ireland’s national charity dedicated to helping people who are vision
 						impaired and families of children with autism to achieve improved mobility and independence.
 					</p>
+                   <a href="https://guidedogs.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="col-sx-12">
-					<h2>Enable Ireland<i class="fas fa-heart" aria-hidden="true"></i></h2>
+					<h2 class="grow">Enable Ireland</h2>
+					<div class="circle-container3">
 
+						<div id="circle-eni-bg">
+
+						</div>
+					</div>
 					<p>
 						Enable Ireland provides services to children and adults with disabilities and their families
 						from over 40 locations in 15 counties. Covering childhood to adulthood our expert teams work
 						with the individual and their family on a plan for each life stage.
 					</p>
+                    <a href="https://www.enableireland.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="col-sx-12">
-					<h2>Irish Cancer Society<i class="fas fa-heart" aria-hidden="true"></i></h2>
+					<h2 class="grow">Irish Cancer Society</h2>
+					<div class="circle-container3">
 
+						<div id="circle-ic-bg">
+
+						</div>
+					</div>
 					<p>
 						Since 2010, the Irish Cancer Society has invested over €20 million into hundreds of innovative
 						research projects. These projects have contributed enormously to our understanding of cancer,
 						how it develops and how to treat different forms of cancer.
 					</p>
+                    <a href="https://www.cancer.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="circle-container2">
@@ -101,8 +121,13 @@
 			<div class="col-sm-4">
 				<div class="col-sx-12">
 					<div class="col-sx-12">
-						<h2>Irish Wheelchair Association<i class="fas fa-heart" aria-hidden="true" ></i></h2>
+						<h2 class="grow">Irish Wheelchair Association</h2>
+						<div class="circle-container3">
 
+							<div id="circle-iw-bg">
+
+							</div>
+						</div>
 						<p>
 							Irish Wheelchair Association (IWA) has gone on to become an important provider of quality
 							services to people with limited mobility throughout the country. Today, our association is
@@ -110,11 +135,17 @@
 							up of a vibrant network of 20,000 members and 2,300 staff, as well as many dedicated
 							volunteers.
 						</p>
+                        <a href="https://www.iwa.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 						<hr class="hr-text">
 					</div>
 					<div class="col-sx-12">
-						<h2>Focus Ireland<i class="fas fa-heart" aria-hidden="true" ></i></h2>
+						<h2 class="grow">Focus Ireland</h2>
+						<div class="circle-container3">
 
+							<div id="circle-fci-bg">
+
+							</div>
+						</div>
 						<p>
 							In 1985, two years after the initial research Focus Point (now
 							Focus Ireland) opened its doors in Eustace Street, Dublin. The organisation provided
@@ -126,11 +157,17 @@
 							for profit working to prevent people becoming, remaining
 							or returning to homelessness,
 						</p>
+                        <a href="https://www.focusireland.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 						<hr class="hr-text">
 					</div>
 					<div class="col-sx-12">
-						<h2> Habitat for Humanity (Ireland)</h2>
+						<h2 class="grow"> Habitat for Humanity (Ireland)</h2>
+						<div class="circle-container3">
 
+							<div id="circle-hhi-bg">
+
+							</div>
+						</div>
 						<p>
 							Founded in 2002, Habitat for Humanity Ireland is a non-profit organisation, working on
 							behalf of
@@ -139,11 +176,17 @@
 							matter of
 							conscience and action.
 						</p>
+                        <a href="https://www.habitatireland.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 						<hr class="hr-text">
 					</div>
 					<div class="col-sx-12">
-						<h2>Down Syndrome Ireland<i class="fas fa-heart" aria-hidden="true"></i></h2>
+						<h2 class="grow">Down Syndrome Ireland</h2>
+						<div class="circle-container3">
 
+							<div id="circle-dsi-bg">
+
+							</div>
+						</div>
 						<p>
 							We are dedicated to being the primary source of information and support to people with Down
 							syndrome, their families and the professional community, working towards an improved quality
@@ -152,15 +195,21 @@
 							valued
 							members of society.
 						</p>
+                        <a href="https://downsyndrome.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 						<hr class="hr-text">
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 pad">
 
 				<div class="col-sx-12">
-					<h2>Make a Wish Ireland<i class="fas fa-heart" aria-hidden="true" ></i></h2>
+					<h2 class="grow">Make a Wish Ireland</h2>
+					<div class="circle-container3">
 
+						<div id="circle-mwi-bg">
+
+						</div>
+					</div>
 					<p>
 						Since 1992, Make-A-Wish has granted wishes for more than 2,500 brave children across Ireland,
 						including 211 wishes granted in 2018 alone. A wish granted is true magic for the child,
@@ -168,27 +217,40 @@
 						does not receive any government funding, and relies overwhelmingly on the kindness of the Irish
 						public to continue granting wishes.
 					</p>
+                    <a href="https://www.makeawish.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="col-sx-12">
-					<h2>Autism Assistance Dogs Ireland<i class="fas fa-heart" aria-hidden="true" ></i></h2>
+					<h2 class="grow">Autism Assistance Dogs Ireland</h2>
+					<div class="circle-container3">
 
+						<div id="circle-aad-bg">
+
+						</div>
+					</div>
 					<p>
 						We are a national charity focused on transforming the lives of children with autism and their
 						families, by training and providing highly skilled 'task specific' assistance dogs to children
 						with autism, who are struggling with the sometimes distressing elements of this invisible
 						disability.
 					</p>
+                    <a href="https://www.autismassistancedogsireland.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="col-sx-12">
-					<h2>Irish Heart Foundation <i class="fas fa-heart" aria-hidden="true" ></i></h2>
+					<h2 class="grow">Irish Heart Foundation</h2>
+					<div class="circle-container3">
 
+						<div id="circle-ihf-bg">
+
+						</div>
+					</div>
 					<p>
 						We campaign to influence Government policy in order to improve care for patients and to prevent
 						premature deaths. We are fighting for real change for families affected by heart disease and
 						stroke
 					</p>
+                    <a href="https://irishheart.ie/" target="_blank"> <i class="smaller-font-sizer">Find out more</i></a>
 					<hr class="hr-text">
 				</div>
 				<div class="circle-container2">
@@ -202,32 +264,39 @@
 
 		</div>
 	</section>
-
-	<footer id="footer">
-		<div class="row col-12">
-			<ul class="col-12">
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-facebook" aria-hidden="true"></i>
-						<span class="sr-only">Facebook</span></a>
-				</li>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-twitter" aria-hidden="true"></i>
-						<span class="sr-only">Twitter</span></a>
-				</li>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-instagram" aria-hidden="true"></i>
-						<span class="sr-only">Intagram</span></a>
-				<li class="col-sm-3 list-inline-item">
-					<a href="#" target="_blank">
-						<i class="fa fa-youtube" aria-hidden="true"></i>
-						<span class="sr-only">YouTube</span></a>
-				</li>
-				</li>
-			</ul>
+<footer id="footer">
+		<div class="row col-12 footer-msg text-center">
+			<h2><i> TEN in one goal is just the beginning!</i>
+				<h2>
 		</div>
+		<i class="col smaller-font-sizer footer-msg text-center ">Help All  •  © 2019  •</i></a>
+		<div class="col container-fluid social-pad">
+			<div class="row col-12">
+				<ul class="list-inline">
+					<li class="list-inline-item">
+						<a href="https://www.facebook.com/" target="_blank">
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://twitter.com/" target="_blank">
+							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<span class="sr-only">Twitter</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://www.instagram.com/" target="_blank">
+							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<span class="sr-only">Intagram</span></a>
+					<li class="list-inline-item">
+						<a href="https://www.youtube.com/" target="_blank">
+							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<span class="sr-only">YouTube</span></a>
+					</li>
+					</li>
+				</ul>
+			</div>
+		</div>
+        
 	</footer>
 
 
