--- a/donate.html
+++ b/donate.html
@@ -2,157 +2,153 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<title>Help All</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Help All</title>
 </head>
 
 <body>
 
-	<header>
-		<div class="container-fluid bg-container">
-			<div class="row no-gutters"><a href="index.html">
-					<h1 id="logo"> Help All <i class="far fa-heart"></i></h1>
-				</a>
-			</div>
-			<nav>
-				<ul class="nav justify-content-end text menu">
-					<li class="nav-item col-sx-12">
-						<a class="nav-link"
-							href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-					</li>
-					<li class="nav-item col-sx-12">
-						<a class="nav-link"
-							href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
-					</li>
-					<li class="nav-item col-sx-12">
-						<a class="nav-link active"
-							href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
-					</li>
+    <div id="image-view3">
+        <nav class="navbar navbar-expand-md bg-nav text">
+            <!-- Brand --------------------------------------->
+            <a class="navbar-brand" href="index.html"><u class="font-text2">Help All</u><i class="far fa-heart"></i></a>
 
-				</ul>
-				</ul>
-			</nav>
-		</div>
-		</div>
-		</div>
-	</header>
-	<section>
+            <!-- Toggler/collapsibe Button ------------------->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-		<div id="hands-clap-image"></div>
-
-	</section>
-	<section class="bg-container-section">
-		<div id="circle-cover-bg-form">
-			<div class="container-fluid row form">
-				<div class="col-sm-6 col-sx-12">
-					<form>
-						<div class="form-row">
-							<div class="col-md-4 mb-3">
-								<label for="validationDefault01">Full Name</label>
-								<input type="text" class="form-control" id="validationDefault01" value="On the Card" required> 
+            <!-- Navbar links -------------------------------->
+            <div class="collapse navbar-collapse justify-content-end font-size" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link active " href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container top">
+            <br>
+            <h1 id="logo"> Donate<i class="far fa-heart"></i></h1>
+        </div>
+    </div>
+    <!---Form Credit Card Payment--------------------------------------->
+    <section class="bg-container-section">
+        <div>
+            <div class="container-fluid row form">
+                <div class="col-sm-6 col-sx-12">
+                    <form class="card">
+                        <div class="form-row">
+                            <div class="col-md-4 mb-3">
+                                <label for="validationDefault01">Full Name</label>
+                                <input type="text" class="form-control" id="validationDefault01" value="On the Card" required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="validationDefaultCardNumber">Card Number</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend2"><i class="fas fa-credit-card"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
                                 </div>
-								<div class="col-md-4 mb-3">
-									<label for="validationDefaultCardNumber">Card Number</label>
-									<div class="input-group">
-										<div class="input-group-prepend">
-											<span class="input-group-text" id="inputGroupPrepend2"><i class="fas fa-credit-card"></i></span>
-										</div>
-										<input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
-                                        </div>
-									</div>
-								</div>
-								<div class="form-row">
-									<div class="col-md-3 mb-3">
-										<label for="validationDefault04">Expire Date</label>
-										<select class="custom-select" id="validationDefault04" required>
-                                            <option selected disabled value="">MM</option>
-                                                 <option>1</option>
-                                                 <option>2</option>
-                                                 <option>3</option>
-                                                 <option>4</option>
-                                                 <option>5</option>
-                                                 <option>6</option>
-                                                 <option>7</option>
-                                                 <option>8</option>
-                                                 <option>9</option>
-                                                 <option>10</option>
-                                                 <option>11</option>
-                                                 <option>12</option>
-                                         </select>
-										<select class="custom-select" id="validationDefault04" required>
-                                            <option selected disabled value="">YY</option>
-                                                 <option>2019</option>
-                                                 <option>2020</option>
-                                                 <option>2021</option>
-                                                 <option>2022</option>
-                                                 <option>2023</option>
-                                                 <option>2024</option>
-                                                 <option>2027</option>                                    
-                                         </select>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-3 mb-3">
+                                <label for="validationDefault04">Expire Date</label>
+                                <select class="custom-select" id="validationDefault04" required>
+                                    <option selected disabled value="">MM</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                    <option>9</option>
+                                    <option>10</option>
+                                    <option>11</option>
+                                    <option>12</option>
+                                </select>
+                                <select class="custom-select" id="validationDefault04" required>
+                                    <option selected disabled value="">YY</option>
+                                    <option>2019</option>
+                                    <option>2020</option>
+                                    <option>2021</option>
+                                    <option>2022</option>
+                                    <option>2023</option>
+                                    <option>2024</option>
+                                    <option>2027</option>
+                                </select>
 
-									</div>
-									<div class="col-md-3 mb-3">
-										<label for="validationDefault05">CVV</label>
-										<input type="text" class="form-control" id="validationDefault05" required> 
-                                        </div>
-									</div>
-									<div class="col-md-4 mb-3 no-padding">
-										<label for="exampleFormControlInput1">Email address</label>
-										<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                                        </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <label for="validationDefault05">CVV</label>
+                                <input type="text" class="form-control" id="validationDefault05" required>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-3 no-padding">
+                            <label for="exampleFormControlInput1">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
 
-										<button class="btn btn-pulse bnt-color btn-primary" type="submit">Donate</button>
-					</form>
-				</div>
-
-			</div>
-		</div>
-	</section>
-
-	<footer id="footer">
-		<div class="row col-12 footer-msg text-center">
-			<h2><i> TEN in one goal is just the beginning!</i>
+                        <button class="btn btn-pulse bnt-color btn-success badge-pill" type="submit">Donate</button>
+                    </form>
+                </div>
+                <!---------Thankful image--------------------------------------------->
+                <div class="col-sm-6 d-none d-sm-block circle-container4" id="thankful-image">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!----------Footer----------------------------------------------------->
+    <footer id="footer">
+        <div class="row col-12 footer-msg footer-align">
+            <h2><i> TEN in one goal is just the beginning!</i>
 				<h2>
 		</div>
-		<i class="col smaller-font-sizer footer-msg text-center ">Help All  •  © 2019  •</i></a>
+		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i></a>
 		<div class="col container-fluid social-pad">
-			<div class="row col-12">
+			<div class="row col-12 footer-align">
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="https://www.facebook.com/" target="_blank">
-							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<i class="fab fa-facebook" aria-hidden="true"></i>
 							<span class="sr-only">Facebook</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://twitter.com/" target="_blank">
-							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<i class="fab fa-twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://www.instagram.com/" target="_blank">
-							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
-							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
 					</li>
 					</li>
 				</ul>
 			</div>
 		</div>
-        
-	</footer>
 
+	</footer>
 </body>
 
 </html>
