--- a/index.html
+++ b/index.html
@@ -2,179 +2,159 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<title>Help All</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Help All</title>
 </head>
 
 <body>
 
-	<header>
-		<div class="container-fluid bg-container">
-			<div class="row no-gutters"><a href="index.html">
-					<h1 id="logo"> Help All<i class="far fa-heart"></i></h1>
-				</a>
-			</div>
+    <div id="image-view1">
+        <nav class="navbar navbar-expand-md bg-nav text">
+ <!----- Brand ---------------------------------------------------->
+            <a class="navbar-brand" href="index.html"><u class="font-text2">Help All</u><i class="far fa-heart"></i></a>
 
-			<nav>
-				<ul class="list-inline nav justify-content-end text menu">
-					<li class="list-inline-item nav-item mr-2 col-sx-12">
-						<a class="nav-link active"
-							href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-					</li>
-					<li class="list-inline-item nav-item mr-2 ">
-						<a class="nav-link"
-							href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
-					</li>
-					<li class="list-inline-item nav-item mr-2">
-						<a class="nav-link "
-							href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
-					</li>
-			</nav>
-		</div>
-		</div>
-		</div>
-	</header>
+<!----- Toggler/collapsibe Button --------------------------------->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-	<section id="hero-outer">
-		<div id="hero-image"></div>
-		<div id="cover-text">
+<!----- Navbar links ---------------------------------------------->
+            <div class="collapse navbar-collapse justify-content-end font-size" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="nav-link active" href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="our-team.html"><i class="fas fa-users" aria-hidden="true"></i><span>Our Team</span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link " href="donate.html"><i class="fas fa-hand-holding-usd"></i><span>Donate</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+<!---Inspiration message inside the image background-------------------->
+        <div id="cover-text">
 
-			<h5 style="color:#4dd0e1">Together we can do 10x more!</h5>
-		</div>
-	</section>
-	<section class="content-color2 bg-container-section text-center text ">
-		<h2 class="uppercase welcome">Saving time is the fastest way to help more people</h2>
-		<p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one
-			goal,
-			created
-			by the will of helping
-			we split all the donations equally among the 10 biggest charities in the country. Growing together is the
-			best
-			path to a better and supported society, click <a href="our-team.html" class="link">here</a> to know more
-			about each of
-			our supported charities. </p>
+            <h5 style="color:#4dd0e1">Together we can do 10x more!</h5>
+        </div>
+    </div>
+<!-----Section with charity aims---------------------------------------->
+    <section class="content-color2 bg-container-section text-center text pad-home">
+        <h2 class="uppercase welcome">Saving time is the fastest way to help more people</h2>
+        <p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one goal, created by the will of helping we split all the donations equally among the 10 biggest charities in the country. Growing together is the best path to a better and supported society, click <a href="our-team.html" class="link">here</a> to know more about each of our supported charities. </p>
 
-		<hr size="10" width="65%" color="#616161">
-		</hr>
-		<h3 class="uppercase description">Together to achieve:</h3>
+        <hr size="10" width="65%" color="#616161">
+        </hr>
+        <h3 class="uppercase description">Together to achieve:</h3>
 
-		<div class="row col-sm-12">
-			<div class="col-sm-4">
-				<div class="col-sx-12">
-					<h2>Vision <i class="fas fa-eye" aria-hidden="true"></i></h2>
+        <div class="row col-sm-12">
+            <div class="col-sm-4">
+                <div class="col-sx-12">
+                    <h2>Development <i class="fas fa-layer-group" aria-hidden="true"></i></h2>
 
-					<p>
-						Responsive, tailored and holistic approaches to identifying and meeting needs
-					</p>
-					<hr class="hr-text">
-				</div>
-				<div class="col-sx-12">
-					<h2>Connection<i class="fas fa-globe" aria-hidden="true"></i></h2>
+                    <p>
+                        Contributions to building social capital and social cohesion
+                    </p>
+                    <hr class="hr-text">
+                </div>
+                <div class="col-sx-12">
+                    <h2>Connection <i class="fas fa-globe" aria-hidden="true"></i></h2>
 
-					<p>
-						Flexibility, innovation, integration and collaboration in delivery
-					</p>
-					<hr class="hr-text">
-				</div>
-				<div class="col-sx-12">
-					<h2>Collaboration<i class="fas fa-people-carry" aria-hidden="true"></i></h2>
+                    <p>
+                        Flexibility, innovation, integration and collaboration in delivery
+                    </p>
+                    <hr class="hr-text">
+                </div>
+                <div class="col-sx-12">
+                    <h2>Collaboration <i class="fas fa-people-carry" aria-hidden="true"></i></h2>
 
-					<p>
-						Ownership, involvement and empowerment of service-beneficiaries and the wider community in
-						shaping
-						services
-						and supports
-					</p>
-					<hr class="hr-text">
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div id="center-about" class="col-sx-12">
-					<div id="circle-container">
+                    <p>
+                        Ownership, involvement and empowerment of service-beneficiaries and the wider community in shaping services and supports
+                    </p>
+                    <hr class="hr-text">
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div id="center-about" class="col-sx-12">
+                    <div id="circle-container">
 
-						<div id="circle-cover-bg">
+                        <div id="circle-cover-bg">
 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="col-sx-12">
-					<h2>Development<i class="fas fa-layer-group" aria-hidden="true"></i></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="col-sx-12">
+                    <h2>Vision <i class="fas fa-eye" aria-hidden="true"></i></h2>
 
-					<p>
-						Contributions to building social capital and social cohesion
-					</p>
-					<hr class="hr-text">
-				</div>
-				<div class="col-sx-12">
-					<h2>Focus<i class="fas fa-user-check" aria-hidden="true"></i></h2>
+                    <p>
+                        Responsive, tailored and holistic approaches to identifying and meeting needs
+                    </p>
+                    <hr class="hr-text">
+                </div>
 
-					<p>
-						Committed, motivated and person-centred staff
-					</p>
-					<hr class="hr-text">
-				</div>
-				<div class="col-sx-12">
-					<h2>Strength <i class="fas fa-fist-raised" aria-hidden="true" ></i></h2>
+                <div class="col-sx-12">
+                    <h2>Focus <i class="fas fa-user-check" aria-hidden="true"></i></h2>
 
-					<p>
-						Bringing additional assets and sources of funding to support the work that would not otherwise
-						be
-						available
-						to the state.
-					</p>
-					<hr class="hr-text">
-				</div>
-			</div>
+                    <p>
+                        Committed, motivated and person-centred staff
+                    </p>
+                    <hr class="hr-text">
+                </div>
+                <div class="col-sx-12">
+                    <h2>Strength <i class="fas fa-fist-raised" aria-hidden="true" ></i></h2>
 
+                    <p>
+                        Bringing additional assets and sources of funding to support the work that would not otherwise be available to the state.
+                    </p>
+                    <hr class="hr-text">
+                </div>
+            </div>
 
-		</div>
-	</section>
-
-
-<footer id="footer">
-		<div class="row col-12 footer-msg text-center">
-			<h2><i> TEN in one goal is just the beginning!</i>
+        </div>
+    </section>
+<!---Footer--------------------------------------------------------->
+    <footer id="footer">
+        <div class="row col-12 footer-msg footer-align">
+            <h2><i> TEN in one goal is just the beginning!</i>
 				<h2>
 		</div>
-		<i class="col smaller-font-sizer footer-msg text-center ">Help All  •  © 2019  •</i></a>
+		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i></a>
 		<div class="col container-fluid social-pad">
-			<div class="row col-12">
+			<div class="row col-12 footer-align">
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<a href="https://www.facebook.com/" target="_blank">
-							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<i class="fab fa-facebook" aria-hidden="true"></i>
 							<span class="sr-only">Facebook</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://twitter.com/" target="_blank">
-							<i class="fa fa-twitter" aria-hidden="true"></i>
+							<i class="fab fa-twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span></a>
 					</li>
 					<li class="list-inline-item">
 						<a href="https://www.instagram.com/" target="_blank">
-							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
-							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
 					</li>
 					</li>
 				</ul>
 			</div>
 		</div>
-        
+
 	</footer>
 
 </body>
