problems fixed, waiting for the final mentor meeting to check if everything is working as it should be

--- a/donate.html
+++ b/donate.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <!---Form Credit Card Payment--------------------------------------->
-    <section class="bg-container-section">
+<section class="bg-container-section">
         <div>
             <div class="container-fluid row form">
                 <div class="col-sm-6 col-sx-12">
@@ -53,15 +53,15 @@
                         <div class="form-row">
                             <div class="col-md-4 mb-3">
                                 <label for="validationDefault01">Full Name</label>
-                                <input type="text" class="form-control" id="validationDefault01" value="On the Card" required>
+                                <input type="text" class="form-control" id="validationDefault01"  placeholder="On the Card" required>
                             </div>
-                            <div class="col-md-4 mb-3">
-                                <label for="validationDefaultCardNumber">Card Number</label>
+                            <div class="col-md-6 mb-3">
+                                <label id="validationDefaultCardNumber">Card Number</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="inputGroupPrepend2"><i class="fas fa-credit-card"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+                                    <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" placeholder="0000.0000.0000.0000" required>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                     <option>11</option>
                                     <option>12</option>
                                 </select>
-                                <select class="custom-select" id="validationDefault04" required>
+                                <select class="custom-select" id="validationDefault05" required>
                                     <option selected disabled value="">YY</option>
                                     <option>2019</option>
                                     <option>2020</option>
@@ -96,8 +96,8 @@
 
                             </div>
                             <div class="col-md-3 mb-3">
-                                <label for="validationDefault05">CVV</label>
-                                <input type="text" class="form-control" id="validationDefault05" required>
+                                <label for="validationDefault06">CVV</label>
+                                <input type="text" class="form-control" id="validationDefault06" placeholder="000" required>
                             </div>
                         </div>
                         <div class="col-md-4 mb-3 no-padding">
@@ -113,14 +113,12 @@
                 </div>
             </div>
         </div>
-    </section>
+</section>
     <!----------Footer----------------------------------------------------->
     <footer id="footer">
         <div class="row col-12 footer-msg footer-align">
-            <h2><i> TEN in one goal is just the beginning!</i>
-				<h2>
-		</div>
-		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i></a>
+            <h2><i> TEN in one goal is just the beginning!</i></h2></div>
+		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i>
 		<div class="col container-fluid social-pad">
 			<div class="row col-12 footer-align">
 				<ul class="list-inline">
@@ -138,11 +136,11 @@
 						<a href="https://www.instagram.com/" target="_blank">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
+                            </li>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
-					</li>
 					</li>
 				</ul>
 			</div>
