--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+            
 <!----- Navbar links ---------------------------------------------->
             <div class="collapse navbar-collapse justify-content-end font-size" id="collapsibleNavbar">
                 <ul class="navbar-nav">
@@ -51,7 +51,6 @@
         <p class="description">Help All brings us the opportunity to help more <b>Charities in Ireland</b> in just one goal, created by the will of helping we split all the donations equally among the 10 biggest charities in the country. Growing together is the best path to a better and supported society, click <a href="our-team.html" class="link">here</a> to know more about each of our supported charities. </p>
 
         <hr size="10" width="65%" color="#616161">
-        </hr>
         <h3 class="uppercase description">Together to achieve:</h3>
 
         <div class="row col-sm-12">
@@ -124,10 +123,8 @@
 <!---Footer--------------------------------------------------------->
     <footer id="footer">
         <div class="row col-12 footer-msg footer-align">
-            <h2><i> TEN in one goal is just the beginning!</i>
-				<h2>
-		</div>
-		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i></a>
+            <h2><i> TEN in one goal is just the beginning!</i></h2></div>
+		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i>
 		<div class="col container-fluid social-pad">
 			<div class="row col-12 footer-align">
 				<ul class="list-inline">
@@ -145,11 +142,11 @@
 						<a href="https://www.instagram.com/" target="_blank">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
+                            </li>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
-					</li>
 					</li>
 				</ul>
 			</div>
