--- a/our-team.html
+++ b/our-team.html
@@ -39,7 +39,6 @@
             </div>
         </nav>
         <div class="container top">
-            <br>
             <h1 id="logo"> Our Team<i class="far fa-heart"></i></h1>
         </div>
     </div>
@@ -50,7 +49,6 @@
         <p class="description pad-p">Many of Ireland’s charities are part-funded by the state to provide health, social and community services, and they form a critical part of Ireland’s social infrastructure, supporting people and communities the length and breadth of the country. Organisations in the sector make available assets and facilities that our health, community and social services could simply not function without, click <a href="donate.html" class="link">here</a> to be part of this support.</p>
 
         <hr size="10" width="65%" color="#616161">
-        </hr>
         <!--------Our Group of Charities divided in 3 Columns  ------------------->
         <h3 class="uppercase description">Our Supported Charities :</h3>
         <!--------First Column---------------------------------------------------->
@@ -235,12 +233,10 @@
     </section>
 
     <!------Footer-------------------------------------------------->
-    <footer id="footer">
+   <footer id="footer">
         <div class="row col-12 footer-msg footer-align">
-            <h2><i> TEN in one goal is just the beginning!</i>
-				<h2>
-		</div>
-		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i></a>
+            <h2><i> TEN in one goal is just the beginning!</i></h2></div>
+		<i class="col smaller-font-sizer footer-msg footer-align" >Help All  •  © 2019  •</i>
 		<div class="col container-fluid social-pad">
 			<div class="row col-12 footer-align">
 				<ul class="list-inline">
@@ -258,11 +254,11 @@
 						<a href="https://www.instagram.com/" target="_blank">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Intagram</span></a>
+                            </li>
 					<li class="list-inline-item">
 						<a href="https://www.youtube.com/" target="_blank">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span></a>
-					</li>
 					</li>
 				</ul>
 			</div>
